# com.unity.formats.fbx

./: .buginfo  .gitignore  .gitlab-ci.yml  .gitmodules  BringToFront.cs  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  QAReport.md  README.md  README.txt  RELEASE_NOTES.md  RELEASE_NOTES_EXTERNAL.md  appcollector.yaml  build.cmd  build.py  build.sh  clean_console_exemption_list.json  package.json.in  pvp_xray_exemptions.json
.github/: pull_request_template.md
.yamato/: _formatting.yml  autodesk-fbx-package-pack.yml  clean-console-test.yml  global.metafile  pack-autodesk-fbx.yml  package-coverage.yml  package-format.yml  package-pack.yml  package-promotion.yml  package-publish.yml  package-test-utr.yml  package-test.yml  promotion.yml  upm-ci.yml
.yamato/generated-scripts/: infrastructure-instability-detection-win.cmd
.yamato/wrench/: api-validation-jobs.yml  package-pack-jobs.yml  preview-a-p-v.yml  promotion-jobs.yml  publish-trigger.yml  recipe-regeneration.yml  validation-jobs.yml  wrench_config.json
Assets/: .gitignore  TestScene.unity
Assets/Editor/: EditorScript.cs  FbxExporter.cs
Assets/FbxExporters/: FbxPrefab.cs  FbxSource.cs  FbxTurnTableBase.cs  README.md  README.txt  RotateModel.cs
Assets/FbxExporters/Editor/: ConvertToModel.cs  ConvertToPrefabEditorWindow.cs  ConvertToPrefabEditorWindow.cs.orig  ConvertToPrefabSettings.cs  EditorRotate.cs  EditorScript.cs  ExportModelEditorWindow.cs  ExportModelSettings.cs  FbxExportPresetSelectorReceiver.cs  FbxExportSettings.cs  FbxExporter.cs  FbxExporterRepairMissingScripts.cs  FbxPostImportPrefabUpdater.cs  FbxPrefabAutoUpdater.cs  FbxPrefabInspector.cs  FbxPropertyChannelPair.cs  FbxRotationCurve.cs  FbxSourceInspector.cs  ImportSetings.cs  InstallIntegration.cs  ManualUpdateEditorWindow.cs  OpenGameWindow.cs  ReviewLastSavedModel.cs
Assets/FbxSdk/: LICENSE.txt  README.txt
Assets/Integrations/: .gitignore
Assets/Integrations/Blender/: Bl_ExportFunction.py  Bl_Exporter.py  Bl_ImportFunction.py  userSetup.py
Assets/com.unity.formats.fbx/: LICENSE.txt  README.txt
Assets/com.unity.formats.fbx.tests/: BlendshapeTests.cs  ConvertToModelReflection.cs  ConvertToModelTest.cs  CustomExtensionsTest.cs  DefaultSelectionTest.cs  ExportPerformanceTest.cs  ExportTimelineClipTest.cs  ExporterTestBase.cs  FbxAnimationTest.cs  FbxCameraTests.cs  FbxConstraintTest.cs  FbxExportSettingsTest.cs  FbxExporterReflection.cs  FbxPrefabAutoUpdaterTest.cs  FbxPrefabTest.cs  FbxPrefabUtilityReflection.cs  IntegrationsTest.cs  ModelExporterTest.cs  RotationCurveTest.cs  _README.md  com.unity.formats.fbx.editortests.asmdef
Assets/com.unity.formats.fbx.tests/Models/: BagOfBones.fbx
Assets/com.unity.formats.fbx.testsAPI/: ExporterTestBaseAPI.cs  PublicAPITest.cs  com.unity.formats.fbx.editortestsAPI.asmdef  publicAPITest.cs
Assets/com.unity.formats.fbx/EditorTests/: ConvertToModelTest.cs  ExporterTestBase.cs  FbxAnimationTest.cs  FbxPrefabAutoUpdaterTest.cs  ModelExporterTest.cs
Assets/com.unity.formats.fbx/Runtime/: FbxPrefab.cs  FbxTurnTableBase.cs
Integrations/Autodesk/maya/: UnityFbxForMaya.txt
Tools/CI/: Program.cs  fbxexporter-recipes.sln  fbxexporter.Cookbook.csproj  regenerate.bat  regenerate.sh
com.unity.formats.fbx/: .npmignore  CHANGELOG.md  LICENSE.md  package.json
com.unity.formats.fbx.tests/: package.json
com.unity.formats.fbx.tests/Models/: blendshape.fbx
com.unity.formats.fbx.tests/Tests/: Unity.Formats.Fbx.Editor.Tests.asmdef
com.unity.formats.fbx/Documentation~/: MakeYamlToc.py  TableOfContents.md  api_index.md  assetstoreUpgrade.md  behaviors-recommendations.md  devguide.md  export-compatible-naming.md  export-gameobjects.md  export-record-in-play-mode-recorder-clip.md  export-record-in-play-mode-recorder-window.md  export-record-in-play-mode.md  export-relevant-system-units.md  export-settings-reference.md  export-timeline-clip.md  export.md  exported-attributes.md  exporting.md  features-behaviors-compatible-naming.md  features-behaviors-exported-attributes.md  features-behaviors.md  index.md  installation.md  integration-3ds-max-manage-objects-to-export.md  integration-3ds-max-roundtrip.md  integration-maya-manage-export-sets.md  integration-maya-roundtrip.md  integration-setup.md  integration.md  knownissues.md  nested-prefabs.md  options.md  prefab-variants-concepts.md  prefab-variants-convert-gameobject.md  prefab-variants-convert-prefab-asset.md  prefab-variants-create-from-model-prefab.md  prefab-variants-workflow.md  prefab-variants.md  prefabs-overview.md  prefabs.md  record-in-play-mode-recorder-clip.md  (+8 more)
com.unity.formats.fbx/Editor/: CameraVisitor.cs  ConvertToNestedPrefab.cs  ConvertToPrefabEditorWindow.cs  ConvertToPrefabSettings.cs  CustomExtensions.cs  ExportModelEditorWindow.cs  ExportModelSettings.cs  ExportSettings.cs  FbxExportPresetSelectorReceiver.cs  FbxExportSettings.cs  FbxExportTimelineAction.cs  FbxExporter.cs  FbxExporterRepairLinkedPrefabs.cs  FbxExporterRepairMissingScripts.cs  FbxPrefabAutoUpdater.cs  FbxPrefabUtility.cs  FbxPropertyChannelPair.cs  FbxRotationCurve.cs  IExportData.cs  InstallIntegration.cs  ManualUpdateEditorWindow.cs  Unity.Formats.Fbx.Editor.api  Unity.Formats.Fbx.Editor.asmdef
com.unity.formats.fbx/Runtime/: FbxPrefab.cs
com.unity.formats.fbx/Tests/: .tests.json  Unity.Formats.Fbx.Editor.Tests.asmdef
fdgRulesets/: KnownExistingWarnings.txt
proto.com.unity.formats.fbx/: package.json  package.json.in
proto.com.unity.formats.fbx/Documentation~/: TableOfContents.md  devguide.md  index.md  index.md.in  nested-prefabs.md  options.md  prefabs-overview.md  prefabs.md
proto.com.unity.formats.fbx/Editor/: ConvertToModel.cs  ConvertToPrefabEditorWindow.cs  ConvertToPrefabSettings.cs  ExportModelSettings.cs  FbxExportSettings.cs  FbxExporter.cs  FbxExporterRepairMissingScripts.cs  FbxPrefabInspector.cs  FbxPrefabUtility.cs  Unity.Formats.Fbx.Editor.asmdef
proto.com.unity.formats.fbx/Runtime/: FbxPrefab.cs  Unity.Formats.Fbx.Runtime.asmdef
scripts/: file-search-replace.py  install_package.sh
tests/yamato/: check_coverage_percent.py
(+281 files in other folders)
